# birdwatch

./: .gitignore  Cargo.toml  README.md
data/notes/: 2021-01.csv  2021-02.csv  2021-03.csv  2021-04.csv  2021-05.csv  2021-06.csv  2021-07.csv  2021-08.csv  2021-09.csv  2021-10.csv  2021-11.csv  2021-12.csv  2022-01.csv  2022-02.csv  2022-03.csv  2022-04.csv  2022-05.csv  2022-06.csv  2022-07.csv  2022-08.csv  2022-09.csv  2022-10.csv  2022-11.csv  2022-12.csv  2023-01.csv  2023-02.csv  2023-03.csv  2023-04.csv  2023-05.csv  2023-06.csv  2023-07.csv  2023-09.csv  2024-11.csv  2024-12.csv  2025-01.csv  2025-02.csv  2025-03.csv  2025-04.csv  2025-05.csv  2025-06.csv  (+11 more)
src/: main.rs  model.rs  source.rs
src/model/: mod.rs  source.rs
workspace/: unknown-aliases.csv
