[package]
name = "birdwatch"
authors = ["Travis Brown <travisrobertbrown@gmail.com>"]
repository = "https://github.com/travisbrown/birdwatch"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
cli-helpers = "0.1"
csv = "1"
itertools = "0.13"
log = "0.4"
serde = { version = "1", features = ["derive"] }
simplelog = "0.12"
thiserror = "2"
